// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton rendering renders expected elements 1`] = `
<label
  className="RadioButton"
>
  <input
    checked={true}
    className=""
    id="test"
    onChange={[MockFunction]}
    tabIndex={0}
    type="radio"
  />
  Test
</label>
`;

exports[`RadioButton rendering renders expected elements when className is set 1`] = `
<label
  className="RadioButton TestClass"
>
  <input
    checked={true}
    className=""
    id="test"
    onChange={[MockFunction]}
    tabIndex={0}
    type="radio"
  />
  Test
</label>
`;

exports[`RadioButton rendering renders expected elements when error is true 1`] = `
<label
  className="RadioButton TestClass"
>
  <input
    checked={true}
    className="error"
    id="test"
    onChange={[MockFunction]}
    tabIndex={0}
    type="radio"
  />
  Test
</label>
`;
